Use `Integer.valueOf(int)` instead of `new Integer(int)`
Change-Id: Ib5c5612b011945434ac9065e88bc0500f122e20c